<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <com.lowenhardt.pickup.Views.ClearableEditText
                android:id="@+id/contactConfigNameEditText"
                android:layout_marginLeft="@dimen/reminder_item_no_icon_margin_start"
                android:layout_marginStart="@dimen/reminder_item_no_icon_margin_start"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:inputType="textCapSentences"
                android:maxLength="@integer/contact_config_name_max_chars"
                android:maxLines="1"
                android:hint="@string/new_contact_config_name"
                android:layout_width="match_parent"
                android:background="@null"
                android:textSize="@dimen/reminder_main_text_size"
                android:textColor="@color/secondaryText"
                android:layout_height="wrap_content"/>

            <!-- separator -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/reminder_items_top_margin"
                android:background="@color/contact_config_items_separator" />

            <com.lowenhardt.pickup.Views.ClearableEditText
                android:id="@+id/contactConfigPhoneNumberEditText"
                android:layout_marginLeft="@dimen/reminder_item_no_icon_margin_start"
                android:layout_marginStart="@dimen/reminder_item_no_icon_margin_start"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:gravity="top|start"
                android:inputType="phone"
                android:digits="0123456789+"
                android:maxLength="14"
                android:maxLines="1"
                android:background="@null"
                android:textSize="@dimen/reminder_item_text_size"
                android:textColor="@color/secondaryText"
                android:layout_marginTop="@dimen/reminder_items_top_margin"
                android:hint="@string/new_contact_config_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- separator -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/reminder_items_top_margin"
                android:background="@color/contact_config_items_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/reminder_item_no_icon_margin_start"
                android:layout_marginStart="@dimen/reminder_item_no_icon_margin_start"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/reminder_items_top_margin"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/reminder_item_text_size"
                    android:text="@string/new_contact_config_calls_interval" />

                <com.warkiz.widget.IndicatorStayLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/callsIntervalMinutesSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_max="@integer/call_interval_minutes_max"
                        app:isb_min="@integer/call_interval_minutes_min"
                        app:isb_progress="@integer/call_interval_minutes_default"
                        app:isb_only_thumb_draggable="false"
                        app:isb_show_indicator="circular_bubble"
                        app:isb_show_tick_texts="true"
                        app:isb_ticks_count="1" />

                </com.warkiz.widget.IndicatorStayLayout>

            </LinearLayout>

            <!-- separator -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/reminder_items_top_margin"
                android:background="@color/contact_config_items_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/reminder_item_no_icon_margin_start"
                android:layout_marginStart="@dimen/reminder_item_no_icon_margin_start"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/reminder_items_top_margin"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/reminder_item_text_size"
                    android:text="@string/new_contact_config_num_calls_before_changing_mode" />

                <com.warkiz.widget.IndicatorStayLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/numCallsToChangeModeSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_max="@integer/calls_before_unmuted_max"
                        app:isb_min="@integer/calls_before_unmuted_min"
                        app:isb_progress="@integer/calls_before_unmuted_default"
                        app:isb_only_thumb_draggable="false"
                        app:isb_show_indicator="circular_bubble"
                        app:isb_show_tick_texts="true"
                        app:isb_ticks_count="1" />

                </com.warkiz.widget.IndicatorStayLayout>

            </LinearLayout>

            <!-- separator -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/reminder_items_top_margin"
                android:background="@color/contact_config_items_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/reminder_item_no_icon_margin_start"
                android:layout_marginStart="@dimen/reminder_item_no_icon_margin_start"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/reminder_items_top_margin"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/reminder_item_text_size"
                    android:text="@string/new_contact_config_volume_when_unmute" />

                <com.warkiz.widget.IndicatorStayLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.warkiz.widget.IndicatorSeekBar
                        android:id="@+id/volumeWhenUnmutedSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isb_max="@integer/volume_when_unmuted_max"
                        app:isb_min="@integer/volume_when_unmuted_min"
                        app:isb_progress="@integer/volume_when_unmuted_max"
                        app:isb_only_thumb_draggable="false"
                        app:isb_show_indicator="circular_bubble"
                        app:isb_show_tick_texts="true"
                        app:isb_ticks_count="1" />

                </com.warkiz.widget.IndicatorStayLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingRight="4dp"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>